force-app/main/default/objects/OpportunityLineItem/fields/RiskFlag__c.field-meta.xml
<CustomField>
  <fullName>RiskFlag__c</fullName>
  <label>Risk Flag</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>