force-app/main/default/objects/OpportunityLineItem/fields/RiskReason__c.field-meta.xml
<CustomField>
  <fullName>RiskReason__c</fullName>
  <label>Risk Reason</label>
  <type>Text</type>
  <length>255</length>
</CustomField>